[package]
name = "cooperative-multitasking"
version = "0.1.0"
authors = ["asukharev <asukharev@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
crossbeam-queue = "*"
conquer-once = "*"
futures-util = "*"
